@startuml
namespace dao {
    class BoltConnectionParams << (S,Aquamarine) >> {
        + Path string
        + Mode fs.FileMode
        + Opts *bolt.Options

        - getParams() any

    }
    class BoltDao << (S,Aquamarine) >> {
        - db *bolt.DB

        + Connect(cp ConnectParams) error
        + Disconnect() error
        + Create(doc Document) error
        + ReadRaw(id uuid.UUID) ([]byte, error)
        + Read(doc *Document, id uuid.UUID) (Document, error)
        + Update(doc Document) error
        + Delete(id uuid.UUID) error
        + SearchByKeyValue(key string, value string) ([]MetaData, error)

    }
    interface ConnectParams  {
        - getParams() any

    }
    interface DAO  {
        + Create( Document) error
        + Read( *Document,  uuid.UUID) (Document, error)
        + ReadRaw( uuid.UUID) ([]byte, error)
        + SearchByKeyValue(key string, value string) ([]MetaData, error)
        + Update( Document) error
        + Delete( uuid.UUID) error
        + Connect( ConnectParams) error
        + Disconnect() error

    }
    interface Document  {
        + GetTitle() string
        + SetTitle( string) error
        + GetMetaData() MetaData
        + SetMetaData( MetaData) error
        + GetID() string

    }
    class DocumentFactory << (S,Aquamarine) >> {
        - registry <font color=blue>map</font>[string]DocumentFactoryFunc

        + RegisterDocumentType(docType string, factory DocumentFactoryFunc) 
        + NewDocument(docType string) (Document, error)

    }
    class MetaData << (S,Aquamarine) >> {
        + Title string
        + Author string
        + PublishDate string
        + LastUpdated string
        + FileType string
        + DocType string
        + Path string
        + Uuid string

    }
    class Notes << (S,Aquamarine) >> {
        + Title string
        + Metadata MetaData
        + Content string

        + GetTitle() string
        + SetTitle(title string) error
        + GetMetaData() MetaData
        + SetMetaData(meta MetaData) error
        + GetContent() any
        + SetContent(content any) error
        + GetID() string

    }
    class dao.DocumentFactoryFunc << (T, #FF7700) >>  {
    }
}

"dao.ConnectParams" <|-- "dao.BoltConnectionParams"
"dao.DAO" <|-- "dao.BoltDao"
"dao.Document" <|-- "dao.Notes"

namespace fao {
    interface FAO  {
        + SaveFile(path string, data io.Reader) error
        + GetFile(path string) (io.ReadCloser, error)
        + DeleteFile(path string) error
        + FileExists(filename string) bool

    }
    class LocalFao << (S,Aquamarine) >> {
        - basePath string

        + SaveFile(path string, data io.Reader) error
        + GetFile(path string) (io.ReadCloser, error)
        + DeleteFile(path string) error
        + FileExists(path string) bool

    }
}

"fao.FAO" <|-- "fao.LocalFao"

namespace pb {
    class FileChunk << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - unknownFields protoimpl.UnknownFields
        - sizeCache protoimpl.SizeCache

        + Data []byte
        + Filename string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetData() []byte
        + GetFilename() string

    }
    class FileRequest << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - unknownFields protoimpl.UnknownFields
        - sizeCache protoimpl.SizeCache

        + Filename string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetFilename() string

    }
    interface FileServiceClient  {
        + DownloadFile(ctx context.Context, in *FileRequest, opts ...grpc.CallOption) (, error)
        + UploadFile(ctx context.Context, opts ...grpc.CallOption) (, error)

    }
    interface FileServiceServer  {
        - mustEmbedUnimplementedFileServiceServer() 

        + DownloadFile( *FileRequest,  ) error
        + UploadFile( ) error

    }
    class FileUploadResponse << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - unknownFields protoimpl.UnknownFields
        - sizeCache protoimpl.SizeCache

        + Message string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetMessage() string

    }
    class UnimplementedFileServiceServer << (S,Aquamarine) >> {
        - mustEmbedUnimplementedFileServiceServer() 
        - testEmbeddedByValue() 

        + DownloadFile( *FileRequest,  ) error
        + UploadFile( ) error

    }
    interface UnsafeFileServiceServer  {
        - mustEmbedUnimplementedFileServiceServer() 

    }
    class UploadStatus << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - unknownFields protoimpl.UnknownFields
        - sizeCache protoimpl.SizeCache

        + Success bool
        + Message string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetSuccess() bool
        + GetMessage() string

    }
    class fileServiceClient << (S,Aquamarine) >> {
        - cc grpc.ClientConnInterface

        + DownloadFile(ctx context.Context, in *FileRequest, opts ...grpc.CallOption) (, error)
        + UploadFile(ctx context.Context, opts ...grpc.CallOption) (, error)

    }
    class pb.FileService_DownloadFileClient << (T, #FF7700) >>  {
    }
    class pb.FileService_DownloadFileServer << (T, #FF7700) >>  {
    }
    class pb.FileService_UploadFileClient << (T, #FF7700) >>  {
    }
    class pb.FileService_UploadFileServer << (T, #FF7700) >>  {
    }
}

"pb.FileServiceServer" <|-- "pb.UnimplementedFileServiceServer"
"pb.UnsafeFileServiceServer" <|-- "pb.UnimplementedFileServiceServer"
"pb.FileServiceClient" <|-- "pb.fileServiceClient"

namespace service {
    class APIHandler << (S,Aquamarine) >> {
        + DaoService DaoService
        + DocumentFactory *dao.DocumentFactory

        + GetService() any
        + SearchByKeyValue(c *gin.Context) 
        + Create(c *gin.Context) 
        + Read(c *gin.Context) 
        + Update(c *gin.Context) 
        + Delete(c *gin.Context) 
        + GetRouterGroups() (string, <font color=blue>map</font>[string]gin.HandlerFunc)

    }
    class DaoService << (S,Aquamarine) >> {
        - dao dao.DAO

        + New(d any) (Service, error)
        + SearchByKeyValue(key string, value string) ([]dao.MetaData, error)
        + Connect(params dao.ConnectParams) error
        + Disconnect() error
        + Create(doc dao.Document) error
        + Read(doc *dao.Document, uuid uuid.UUID) (dao.Document, error)
        + ReadRaw(uuid uuid.UUID) ([]byte, error)
        + Update(doc dao.Document) error
        + Delete(id uuid.UUID) error

    }
    class FileHandler << (S,Aquamarine) >> {
        + FaoService FileHandlerService
        + FileServiceClient pb.FileServiceClient

        + GetService() any
        + UploadFile(c *gin.Context) 
        + DownloadFile(c *gin.Context) 
        + GetRouterGroups() (string, <font color=blue>map</font>[string]gin.HandlerFunc)

    }
    class FileHandlerService << (S,Aquamarine) >> {
        - fss pb.UnimplementedFileServiceServer
        - fao fao.FAO

        + New(f any) (Service, error)
        + UploadFile(filename string, stream pb.FileService_UploadFileServer) error
        + DownloadFile(req *pb.FileRequest, stream pb.FileService_DownloadFileServer) error

    }
    interface Handler  {
        + GetRouterGroups() (string, <font color=blue>map</font>[string]gin.HandlerFunc)
        + GetService() any

    }
    class RequestBody << (S,Aquamarine) >> {
        + Uuid string

    }
    interface Service  {
        + New( any) (Service, error)

    }
}

"service.Handler" <|-- "service.APIHandler"
"dao.DAO" <|-- "service.DaoService"
"service.Service" <|-- "service.DaoService"
"service.Handler" <|-- "service.FileHandler"
"service.Service" <|-- "service.FileHandlerService"

"dao.<font color=blue>func</font>() Document" #.. "dao.DocumentFactoryFunc"
"pb." #.. "pb.FileService_DownloadFileClient"
"pb." #.. "pb.FileService_DownloadFileServer"
"pb." #.. "pb.FileService_UploadFileClient"
"pb." #.. "pb.FileService_UploadFileServer"
@enduml
